packages/react-components/src/components/AlertBanner/AlertBanner.css
.bcds-Alert-Banner {
  display: flex;
  flex-direction: row;
  gap: var(--layout-margin-medium);
  justify-content: space-between;
  align-items: center;
  padding: var(--layout-padding-small) var(--layout-padding-xlarge);
}

.bcds-Alert-Banner--Icon {
  align-self: first baseline;
  justify-self: flex-start;
  padding-top: var(--layout-padding-xsmall);
  color: var(--icons-color-primary-invert);
}

.bcds-Alert-Banner--Container {
  display: inline-flex;
  gap: var(--layout-margin-medium);
  align-items: first baseline;
  flex-grow: 1;
  font: var(--typography-regular-body);
  color: var(--typography-color-primary-invert);
}

.bcds-Alert-Banner--closeIcon {
  align-self: first baseline;
}

.bcds-Alert-Banner--closeIcon > .bcds-react-aria-Button[data-hovered] svg {
  color: var(--icons-color-primary);
}

.bcds-Alert-Banner--closeIcon svg {
  color: var(--icons-color-primary-invert);
}

/* Variants */

/* Info theme */
.bcds-Alert-Banner.info {
  background-color: var(--surface-color-background-dark-blue);
}

/* Success theme */
.bcds-Alert-Banner.success {
  background-color: var(--support-border-color-success);
}

/* Warning theme */
.bcds-Alert-Banner.warning {
  background-color: var(--support-border-color-warning);
}

.bcds-Alert-Banner.warning > .bcds-Alert-Banner--Icon {
  color: var(--icons-color-primary);
}

.bcds-Alert-Banner.warning > .bcds-Alert-Banner--Container {
  color: var(--typography-color-primary);
}

.bcds-Alert-Banner.warning > .bcds-Alert-Banner--closeIcon svg {
  color: var(--icons-color-primary);
}

/* Danger theme */
.bcds-Alert-Banner.danger {
  background-color: var(--support-border-color-danger);
}

/* Dark theme */

.bcds-Alert-Banner.dark {
  background-color: var(--theme-gray-110);
}

/* Beta theme */
.bcds-Alert-Banner.beta {
  background-color: var(--theme-blue-80);
}

.bcds-Alert-Banner.beta > .bcds-Alert-Banner--Icon {
  color: var(--icons-color-primary-invert);
}

